--- a/admin/css/fine-details.css
+++ b/admin/css/fine-details.css
@@ -18,7 +18,7 @@
   cursor: pointer;
   position: relative;
   user-select: none;
-  width: 200px;
+  width: 300px;
   height: 300px;
   margin: 2rem auto;
   border: 1px solid #ffffff22;
@@ -44,6 +44,7 @@
     text-decoration: none;
   }
   .main h2 {
+    line-height: 30px;
     color: #e1e1e1;
   }
   .main {
@@ -105,7 +106,7 @@
       display: flex;
       align-items: center;
       margin-top: 0.2rem;
-      margin-bottom: -0.3rem;
+      margin-bottom: 10px;
       ins {
         color: #a89ec9;
         text-decoration: none;
