--- a/admin/css/index.css
+++ b/admin/css/index.css
@@ -125,7 +125,7 @@ p {
   opacity: 1;
   transition: all 300ms ease-in-out;
 }
-.modal-wrap {
+/* .modal-wrap {
   border: 1px solid black;
   position: relative;
   display: block;
@@ -133,6 +133,26 @@ p {
   max-width: 400px;
   margin: 0;
   margin-top: 20px;
+  margin-bottom: 20px;
+  border-radius: 4px;
+  overflow: hidden;
+  background-color: #fff;
+  -ms-flex-item-align: center;
+  align-self: center;
+  box-shadow: 0 12px 25px 0 rgba(199, 175, 189, 0.25);
+  opacity: 0;
+  transform: scale(0.6);
+  transition: opacity 250ms 250ms ease, transform 300ms 250ms ease;
+} */
+.modal-wrap {
+  border: 1px solid black;
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 100vh;
+  max-width: 800px;
+  margin: 0;
+  /* margin-top: 20px; */
   margin-bottom: 20px;
   border-radius: 4px;
   overflow: hidden;
@@ -203,7 +223,7 @@ p {
   color: #484848;
 }
 
-.noti-form .form {
+/* .noti-form .form {
   width: 340px;
   height: 440px;
   background: #e6e6e6;
@@ -216,6 +236,20 @@ p {
   font-family: "Montserrat", sans-serif;
   position: relative;
   overflow-y: scroll;
+} */
+.noti-form .form {
+  width: 800px;
+  height: auto;
+  /* background: #e6e6e6; */
+  /* border-radius: 8px; */
+  /* box-shadow: 0 0 40px -10px #000; */
+  /* margin: 20 auto; */
+  padding: 20px 30px;
+  /* max-width: calc(100vw - 40px); */
+  box-sizing: border-box;
+  font-family: "Montserrat", sans-serif;
+  position: relative;
+  /* overflow-y: scroll; */
 }
 
 .noti-form h2 {
@@ -251,10 +285,21 @@ p {
   color: #5a5a5a;
 }
 
-.noti-form button {
+/* .noti-form button {
   float: right;
   padding: 8px 12px;
   margin: 8px 0 0;
+  font-family: "Montserrat", sans-serif;
+  border: 2px solid #78788c;
+  background: 0;
+  color: #5a5a6e;
+  cursor: pointer;
+  transition: all 0.3s;
+} */
+.noti-form button {
+  float: right;
+  padding: 8px 12px;
+  margin: 8px 30px 0 0;
   font-family: "Montserrat", sans-serif;
   border: 2px solid #78788c;
   background: 0;
